# cpp-examples

./: .baselrc  .clang-format  .devcontainer.json  .gitignore  BUILD.bazel  CMakeLists.txt  Dockerfile  MODULE.bazel  README.md  conanfile.py
callback/: BUILD.bazel  CMakeLists.txt
callback/include/: callback.hpp
callback/include/callback/: callable.hpp
callback/src/: callable.cpp  callback.cpp
callback/test/: CMakeLists.txt  callable_test.cpp  test_callable.cpp
callbacks/: CMakeLists.txt  conanfile.py
callbacks/test/: CMakeLists.txt
mpsc/: BUILD.bazel  CMakeLists.txt
mpsc/demo/: main.cpp
mpsc/include/mpsc/: ring.hpp
mpsc/src/: ring.cpp
mpsc/test/: CMakeLists.txt  test_ring.cpp
observer/: BUILD.bazel  CMakeLists.txt  conanfile.py
observer/include/: observer.hpp
observer/include/observer/: dispatcher.hpp  event.hpp  observer.hpp
observer/src/: dispatcher.cpp  observer.cpp
observer/test/: CMakeLists.txt  test_dispatcher.cpp  test_observer.cpp
