bazel_dep(name = "rules_cc", version = "0.0.17")
bazel_dep(name = "googletest", version = "1.17.0")

git_override(
    module_name = "googletest",
    remote = "https://github.com/google/googletest.git",
    commit = "52eb810",
)

# Hedron's compile_commands.json extractor
bazel_dep(name = "hedron_compile_commands", dev_dependency = True)
git_override(
    module_name = "hedron_compile_commands",
    remote = "https://github.com/hedronvision/bazel-compile-commands-extractor.git",
    commit = "abb61a688167623088f8768cc9264798df6a9d10",
)
