load("@rules_cc//cc:cc_library.bzl", "cc_library")
load("@rules_cc//cc:cc_test.bzl", "cc_test")


cc_library(
    name = "callback",
    srcs = ["src/callable.cpp"],
    hdrs = ["include/callback/callable.hpp"],
    visibility = ["//visibility:public"],
    includes = ["include"],
)

cc_test(
    name = "callback_test",
    srcs = ["test/callable_test.cpp"],
    deps = [
        ":callback",
        "@googletest//:gtest_main",
    ],
    includes = ["include"],
)

