load("@rules_cc//cc:cc_library.bzl", "cc_library")
load("@rules_cc//cc:cc_test.bzl", "cc_test")


cc_library(
    name = "observer",
    srcs = ["src/observer.cpp",
            "src/dispatcher.cpp"],
    hdrs = ["include/observer/observer.hpp",
            "include/observer/dispatcher.hpp",
            "include/observer/event.hpp"],
    includes = ["include"],
    visibility = ["//visibility:public"],
    deps = ["//callback:callback"],
)

cc_test(
    name = "observer_test",
    srcs = ["test/dispatcher_test.cpp"],
    deps = [
        ":observer",
        "@googletest//:gtest_main",
    ],
)

